final css and html changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-        <h1> Assignment 2 - Dynamic Images </h1>
+        <h1> Assignment 2 - Dynamic Images - Nick Lichacz </h1>
         <div id="container">
 
         </div>
